# AI-Critical-Learning

./: .gitignore  FME_Evaluator.md  README.md  pyproject.toml  run_supplemental_ablation_experiments.sh
Prompt/: Gold_Data_Pick.txt  prompt.txt
Visualization/: make_figures.py
docs/: AI-Critical-Learning.code-workspace  Function_4_Command.txt  baseline_running_command.txt  boundary_variant_setting_drops.csv  boundary_variant_summary.csv  boundary_variant_summary.md  commands.md  commands.txt  cosine_reliance_running_command.txt  gold_data_annotation_and_selection.md  multi_seed_ggcl_exact_run_stats.csv  multi_seed_ggcl_exact_run_stats.md  multi_seed_loss_gap_by_epoch.csv  multi_seed_loss_gap_epoch_stats.csv  multi_seed_main_setting_stats.csv  multi_seed_results_summary.md  multi_seed_supplemental_exact_run_stats.csv  multi_seed_supplemental_exact_run_stats.md  stl_blur_3p0_results.md  stl_brightness_0p75_results.md  stl_gaussian_30p0_results.md  stl_label_shuffle_0p2_results.md  train_clean_test_noise_command.txt  train_noise_test_noise_command.txt
local_annotations/: Golden_Gold_Standard_seed42.jsonl  Golden_Gold_Standard_seed42_meta.json  reliance_gold_seed42.jsonl  reliance_raw10k_seed42.jsonl  reliance_raw10k_seed42_meta.json  test_index_map.jsonl  test_index_map_blur_r1.2.jsonl  test_index_map_brightness_f0.65.jsonl  test_index_map_gaussian_noise_s12.jsonl  train_clean_reliance.jsonl  train_clean_reliance_meta.json  train_index_map.jsonl
scripts/: Baseline_Exp.py  Gold_Guided_Critical_Learning.py  Train_Gold_Evaluator.py
seed_22/: README.md  (+1 more)
(+2222 files in other folders)
