[project]
name = "ai-critical-learning"
version = "0.1.0"
description = "Critical Learning experiments on Superpod (CIFAR-10 etc.)"
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "scipy",
  "matplotlib",
  "seaborn",
  "tensorboard",
  "transformers",
  "datasets",
  "huggingface-hub",
  "accelerate",
  "safetensors",
  "tqdm",
  "pyyaml",
  "openai>=2.24.0",

  # PyTorch (CUDA 12.8 build via the pytorch-cu128 index below)
  "torch==2.10.*",
  "torchvision==0.25.*",
]

[dependency-groups]
dev = [
  "pytest",
  "ruff",
]

# Use PyTorch CUDA 12.8 wheels from the official PyTorch index.
# `explicit = true` prevents uv from using this index unless you pass `--index pytorch-cu128`.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true